manifests/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  labels:
    app: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
        - name: result
          image: __ACCOUNT_ID__.dkr.ecr.__REGION__.amazonaws.com/voting-app/result:__IMAGE_TAG__

          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: result
spec:
  type: NodePort
  selector:
    app: result
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30002
