manifests/vote-deplyoment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  labels:
    app: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
        - name: vote
          image: __ACCOUNT_ID__.dkr.ecr.__REGION__.amazonaws.com/voting-app/vote:__IMAGE_TAG__
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: vote
spec:
  type: NodePort
  selector:
    app: vote
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
